Changed alignment of bio in the sidebar, fixed auto-margin of images to align them on the left

--- a/_sass/_img.scss
+++ b/_sass/_img.scss
@@ -5,8 +5,6 @@ img {
     max-width: $img_max_width;
     height: $img_height;
     display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .article-img {
