--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -25,10 +25,6 @@
     max-width: 100%;
   }
 
-  #jan-wilczek-image {
-    padding-right: -20px;
-  }
-
   .card {
     .row {
       display: flex;
